# test_uv_github_actions

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  lint.yml  release.yml  schedule.yml
src/github_actions_practice/: __init__.py  main.py  utils.py  web.py
tests/: __init__.py  test_main.py  test_utils.py  test_web.py
